   make rfbLog overridable (suggested by Erik)
   don't reutrn on EINTR in WriteExact()/ReadExact() (suggested by Erik)
   use AX_PREFIX_CONFIG_H to prefix constants in config.h to avoid
	name clashes (also suggested by Erik)
   transformed Bool, KeySym, Pixel to rfbBool, rfbKeySym, rfbPixel
	(as suggested by Erik)
   purged exit() calls (suggested by Erik)
   fixed bug with maxRectsPerUpdate and Tight Encoding (these are incompatible)
   checked sync with TightVNC 1.2.8:
	viewonly/full passwords; if given a list, only the first is a full one
	vncRandomBytes is a little more secure now
	new weights for tight encoding
   checked sync with RealVNC 3.3.7
	introduced maxRectsPerUpdate
   added first alpha version of LibVNCClient
   added simple and simple15 example (really simple examples)
   finally got around to fix configure in CVS
   long standing http bug (.jar was sent twice) fixed by a friend of Karl named Mike
   http options in cargs
   when closing a client and no longer listening for new ones, don't crash
   fixed a bug with ClientConnectionGone
   endianness is checked at configure time
   fixed a bug that prevented the first client from being closed
   fixed that annoying "libvncserver-config --link" bug
   make rfbReverseByte public (for rdp2vnc)
   fixed compilation on OS X, IRIX, Solaris
   install target for headers is now ${prefix}/include/rfb ("#include <rfb/rfb.h>")
   renamed "sraRegion.h" to "rfbregion.h"
   CARD{8,16,32} are more standard uint{8,16,32}_t now
   fixed LinuxVNC colour handling
   fixed a bug with pthreads where the connection was not closed
   moved vncterm to main package (LinuxVNC included)
   portability fixes (IRIX, OSX, Solaris)
   more portable way to determine endianness and types of a given size
	through autoconf based methods
0.5
   rpm packaging through autoconf
   autoconf'ed the whole package (including optional support for zlib,
	pthreads and libjpeg as well as zrle/c++)