@@ -1,3 +1,4 @@
+   introduce rfbErr for Errors (Erik)
    make rfbLog overridable (suggested by Erik)
    don't reutrn on EINTR in WriteExact()/ReadExact() (suggested by Erik)
    use AX_PREFIX_CONFIG_H to prefix constants in config.h to avoid
